--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,8 +44,8 @@ services:
     networks:
       - travellist
   appserver:
-    image: 'angular-laravel-book'
-    container_name: chapter-10-appserver
+    image: 'angular-laravel-spa'
+    container_name: laravel-spa-appserver
     # Build the image if don't exist
     build: './client'
     ports:
