--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,5 +1,5 @@
-FROM node:7.7.2-alpine
+FROM node:14
 WORKDIR /var/www/client
-COPY package.json .
-RUN npm install --quiet
-COPY . .
+#COPY package.json .
+#RUN npm install -g @angular/cli && npm install && npm run build
+#COPY . .
