--- a/client/package.json
+++ b/client/package.json
@@ -1,49 +1,40 @@
 {
-    "name": "sample-app-angular",
-    "version": "0.0.0",
-    "license": "MIT",
-    "angular-cli": {},
+    "name": "webpackapp",
+    "version": "1.0.0",
+    "author": "Shekhtman Maxim",
     "scripts": {
-        "ng": "ng",
-        "start": "ng serve --prod --source-map",
-        "build": "ng build --prod --source-map",
-        "test": "npm run build && cypress-runner run",
-        "test:open": "npm run build && cypress-runner open",
-        "e2e": "npm run test",
-        "gh-pages": "ng build --base-href=/sample-app-angular/ && shx rm -rf pages && shx mkdir pages && cd pages && git init && git remote add pages git@github.com:ui-router/sample-app-angular.git && git fetch pages && git checkout gh-pages && git rm -rf * && shx mv ../dist/* . && git add . && git commit -m 'Update gh-pages' . && git push && cd .. && shx rm -rf pages"
+        "dev": "webpack serve",
+        "build": "webpack"
     },
-    "private": true,
     "dependencies": {
-        "@angular/common": "11.0.5",
-        "@angular/compiler": "11.0.5",
-        "@angular/core": "11.0.5",
-        "@angular/forms": "11.0.5",
-        "@angular/platform-browser": "11.0.5",
-        "@angular/platform-browser-dynamic": "11.0.5",
-        "@uirouter/angular": "^8.0.1",
-        "@uirouter/core": "6.0.7",
-        "@uirouter/rx": "0.6.5",
-        "@uirouter/visualizer": "^7.2.1",
-        "core-js": "^2.5.7",
-        "rxjs": "^6.6.7",
-        "rxjs-compat": "^6.6.7",
-        "ts-helpers": "^1.1.2",
-        "tslib": "^2.3.0",
-        "zone.js": "~0.10.3"
+        "@angular/common": "~12.0.0",
+        "@angular/compiler": "~12.0.0",
+        "@angular/core": "~12.0.0",
+        "@angular/forms": "~12.0.0",
+        "@angular/platform-browser": "~12.0.0",
+        "@angular/platform-browser-dynamic": "~12.0.0",
+        "@angular/router": "~12.0.0",
+        "rxjs": "~6.6.0",
+        "zone.js": "~0.11.4"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "~0.1100.7",
-        "@angular/animations": "11.0.5",
-        "@angular/cli": "^11.2.12",
-        "@angular/compiler-cli": "11.0.5",
-        "@types/jasmine": "~3.6.10",
-        "@uirouter/cypress-runner": "^1.1.0",
-        "codelyzer": "^6.0.2",
-        "fibers": "5.0.0",
-        "html-webpack-plugin": "4.3.0",
-        "node-sass": "4.14.1",
-        "shx": "^0.3.3",
-        "tslint": "6.1.2",
-        "typescript": "~4.0.8"
+        "@types/node": "~15.0.3",
+        "@types/node-sass": "^4.11.0",
+        "angular2-template-loader": "~0.6.2",
+        "css-loader": "~5.2.4",
+        "css-modules-typescript-loader": "^2.0.1",
+        "file-loader": "~6.2.0",
+        "html-loader": "~2.1.0",
+        "html-webpack-plugin": "~5.3.1",
+        "mini-css-extract-plugin": "^1.6.2",
+        "node-sass": "^4.12.0",
+        "raw-loader": "~4.0.2",
+        "sass-loader": "^7.1.0",
+        "style-loader": "^0.23.1",
+        "ts-loader": "~9.1.2",
+        "typescript": "~4.2.4",
+        "webpack": "~5.37.0",
+        "webpack-cli": "~4.7.0",
+        "webpack-dev-server": "~3.11.0"
     }
 }
