--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,15 +1,19 @@
-
-
-/*
-  This is a "Solution Style" tsconfig.json file, and is used by editors and TypeScript’s language server to improve development experience.
-  It is not intended to be used to perform a compilation.
-  To learn more about this file see: https://angular.io/config/solution-tsconfig.
-*/
 {
-    "files": [],
-    "references": [
-        {
-            "path": "./src/tsconfig.json"
-        }
+    "compilerOptions": {
+        "target": "es5",
+        "module": "es2015",
+        "moduleResolution": "node",
+        "sourceMap": true,
+        "emitDecoratorMetadata": true,
+        "experimentalDecorators": true,
+        "lib": [ "es2015", "dom" ],
+        "noImplicitAny": true,
+        "suppressImplicitAnyIndexErrors": true,
+        "typeRoots": [
+            "node_modules/@types/"
+        ]
+    },
+    "exclude": [
+        "node_modules"
     ]
 }
