--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,12 +1,15 @@
 {
     "compilerOptions": {
         "target": "es5",
-        "module": "es2015",
+        "module": "es2020",
         "moduleResolution": "node",
         "sourceMap": true,
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
-        "lib": [ "es2015", "dom" ],
+        "lib": [
+            "es2018",
+            "dom"
+        ],
         "noImplicitAny": true,
         "suppressImplicitAnyIndexErrors": true,
         "typeRoots": [
