--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
         "@angular/platform-browser-dynamic": "~12.0.0",
         "@angular/router": "~12.0.0",
         "rxjs": "~6.6.0",
+        "to-string-loader": "^1.1.6",
         "zone.js": "~0.11.4"
     },
     "devDependencies": {
