--- a/client/package.json
+++ b/client/package.json
@@ -11,9 +11,13 @@
         "@angular/compiler": "~12.0.0",
         "@angular/core": "~12.0.0",
         "@angular/forms": "~12.0.0",
+        "@angular/http": "^7.2.16",
         "@angular/platform-browser": "~12.0.0",
         "@angular/platform-browser-dynamic": "~12.0.0",
         "@angular/router": "~12.0.0",
+        "core-js": "^3.18.0",
+        "lodash": "^4.17.21",
+        "ng-lazyload-image": "^9.1.0",
         "rxjs": "~6.6.0",
         "to-string-loader": "^1.1.6",
         "zone.js": "~0.11.4"
